Reduced amount of elements

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,4 +1,6 @@
 branch-defaults:
+  juan-herrera-bot:
+    environment: simple-environment
   master:
     environment: simple-environment
     group_suffix: null
