--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "config": "^1.21.0",
+    "diacritics": "^1.2.3",
     "express": "^4.14.0",
     "request": "^2.75.0"
   }
